--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/babel-preset-css-prop": "^11.2.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "firebase": "^8.10.0",
+    "firebase-admin": "^10.0.0",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
